Bug 361881 - vCard 4.0 export uses extended format for birthday
Summary: vCard 4.0 export uses extended format for birthday
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-17 01:31 UTC by Rettich
Modified: 2016-04-17 11:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rettich 2016-04-17 01:31:52 UTC
According to the vCard 4.0 RFC (https://tools.ietf.org/html/rfc6350#section-4.3) vCard 4.0 only supports basic date/time formats. However, if I export a contact in vCard 4.0 format, I get the following:

--------
BEGIN:VCARD
VERSION:4.0
ADR;TYPE=home:xxxx
BDAY:1999-12-30T00:00:00
.....
--------

Reproducible: Always

Steps to Reproduce:
1. Create a contact with a birthday
2. Export the contact as vCard 4.0

Actual Results:  
BEGIN:VCARD
VERSION:4.0
ADR;TYPE=home:xxxx
BDAY:1999-12-30T00:00:00
.....

Expected Results:  
BEGIN:VCARD
VERSION:4.0
ADR;TYPE=home:xxxx
BDAY:19991230T000000
.....

I am using KAddressBook 5.1.3.

I am currently trying to synchronize my contacts via an Owncloud server. However, the birthday gets lost on some on some carddav clients. This might be related to the format issues.
Comment 1 Laurent Montel 2016-04-17 10:17:24 UTC
you're right.
I will investigate to fix it soon.
Comment 2 Laurent Montel 2016-04-17 11:50:43 UTC
Git commit ee88d1cf8617817bf1e8731a202f00038249dd3e by Montel Laurent.
Committed on 17/04/2016 at 11:50.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 361881 - vCard 4.0 export uses extended format for birthday

FIXED-IN: 5.2.1

M  +32   -16   src/vcardtool.cpp
M  +1    -1    src/vcardtool.h

http://commits.kde.org/kcontacts/ee88d1cf8617817bf1e8731a202f00038249dd3e