Fix Bug 361881 - vCard 4.0 export uses extended format for birthday

FIXED-IN: 5.2.1
BUG: 361881